sleep deployment and edit approval

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -54,18 +54,28 @@ jobs:
       - name: Ask for staging deployment approval
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
-          deploy_approval: "YES" # Replace this with your desired value, e.g., "YES" or "NO"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
         run: |
           deploy_approval=${{ env.deploy_approval }}
 
           if [[ "$deploy_approval" == "YES" ]]; then
             echo "Staging deployment is approved."
             echo "Proceeding with the deployment..."
+            
+            # Update the deploy_approval status to "YES" in the pull request
+            curl -X POST \
+              -H "Authorization: token $GITHUB_TOKEN" \
+              -d '{
+                "event": "APPROVE"
+              }' \
+              "https://api.github.com/repos/sencloudpl/workflow/pulls/$PULL_REQUEST_NUMBER/reviews"
+
           else
             echo "Staging deployment is not approved."
             echo "Waiting for approval or timeout..."
             
-            # Sleep for a specified amount of time (e.g., 1 hour = 3600 seconds)
+            # Sleep for 15 seconds
             sleep 15
             
             # Check if the approval is still not received
@@ -75,6 +85,24 @@ jobs:
               exit 0
             fi
           fi
+
+      - name: Create Pull Request
+        if: ${{ needs.build.outputs.latest_tag != '0.0.0' && env.deploy_approval == 'YES' }}
+        run: |
+          # Récupérer le nom de la branche actuelle
+          CURRENT_BRANCH=$(git branch --show-current)
+            
+          # Créer la Pull Request en utilisant l'API GitHub
+          curl -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -d '{
+              "title": "Ma nouvelle Pull Request",
+              "head": "staging",
+              "base": "main",
+              "body": "Description de la Pull Request"
+            }' \
+            "https://api.github.com/repos/sencloudpl/workflow/pulls"
+
 
 
       # - name: Fetch the remote changes
@@ -104,21 +132,21 @@ jobs:
       #     git push origin --tags
 
 
-      - name: Create Pull Request
-        if: ${{ needs.build.outputs.latest_tag != '0.0.0' && env.deploy_approval == 'YES' }}
-        run: |
-          # Récupérer le nom de la branche actuelle
-          CURRENT_BRANCH=$(git branch --show-current)
+      # - name: Create Pull Request
+      #   if: ${{ needs.build.outputs.latest_tag != '0.0.0' && env.deploy_approval == 'YES' }}
+      #   run: |
+      #     # Récupérer le nom de la branche actuelle
+      #     CURRENT_BRANCH=$(git branch --show-current)
           
-          # Créer la Pull Request en utilisant l'API GitHub
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d '{
-              "title": "Ma nouvelle Pull Request",
-              "head": "staging",
-              "base": "main",
-              "body": "Description de la Pull Request"
-            }' \
-            "https://api.github.com/repos/sencloudpl/workflow/pulls"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     # Créer la Pull Request en utilisant l'API GitHub
+      #     curl -X POST \
+      #       -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+      #       -d '{
+      #         "title": "Ma nouvelle Pull Request",
+      #         "head": "staging",
+      #         "base": "main",
+      #         "body": "Description de la Pull Request"
+      #       }' \
+      #       "https://api.github.com/repos/sencloudpl/workflow/pulls"
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
