--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,10 +51,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Record start time
-        id: start_time
-        run: echo "::set-output name=time::$(date +%s)"
-
       - name: Ask for staging deployment approval
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
@@ -78,20 +74,8 @@ jobs:
           else
             echo "Staging deployment is not approved."
             echo "Waiting for approval or timeout..."
-
-            # Calculate elapsed time
-            current_time=$(date +%s)
-            start_time=${{ steps.start_time.outputs.time }}
-            elapsed_time=$((current_time - start_time))
-
-            # Check if timeout (15 seconds) has passed
-            if [[ $elapsed_time -ge 15 ]]; then
-              echo "Timeout reached. Skipping the staging deployment..."
-              exit 0
-            fi
-
-            # Sleep for 1 second before next check
-            sleep 1
+            # Sleep for 15 seconds
+            sleep 15
 
             # Check if the approval is still not received
             if [[ "$deploy_approval" != "YES" ]]; then
