--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,7 +51,7 @@ jobs:
     - uses: trstringer/manual-approval@v1
       with:
         secret: ${{ github.TOKEN }}
-        approvers: sencloud,MamadouSadio
+        approvers: sencloudpl,MamadouSadio
         minimum-approvals: 1
         issue-title: "Deploying v1.3.5 to prod from staging"
         issue-body: "Please approve or deny the deployment of version v1.3.5."
